--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-04 Sat 23:06]
+#+CAPTION: Clock summary at [2017-03-04 Sat 23:37]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:44* |       |       | 100.0 |
+| *Total time*                                                                | *45:14* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:44   |       |       | 100.0 |
-| Active                                                                      |         | 44:44 |       | 100.0 |
+| Stories                                                                     | 45:14   |       |       | 100.0 |
+| Active                                                                      |         | 45:14 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.1 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.1 |
 | COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.0 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.3 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.0 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   4.9 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   0.8 |
 | COMPLETED Fix codacy warning on exceptions                                  |         |       |  0:08 |   0.3 |
-| COMPLETED Create a language independent ORM layer                           |         |       | 12:51 |  28.7 |
+| COMPLETED Create a language independent ORM layer                           |         |       | 12:51 |  28.4 |
 | COMPLETED Make log directory configurable                                   |         |       |  1:26 |   3.2 |
-| STARTED Tidy-up test models                                                 |         |       |  2:01 |   4.5 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  46.5 |
+| STARTED Tidy-up test models                                                 |         |       |  2:31 |   5.6 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  45.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -335,6 +335,7 @@ It would be nice to supply a directory for the log files and get dogen
 to output the logs there.
 
 *** STARTED Tidy-up test models                                       :story:
+    CLOCK: [2017-03-04 Sat 23:07]--[2017-03-04 Sat 23:37] =>  0:30
     CLOCK: [2017-03-04 Sat 22:25]--[2017-03-04 Sat 23:06] =>  0:41
     CLOCK: [2017-03-04 Sat 21:04]--[2017-03-04 Sat 22:24] =>  1:20
 
