--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-04 Sat 23:37]
+#+CAPTION: Clock summary at [2017-03-04 Sat 23:45]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *45:14* |       |       | 100.0 |
+| *Total time*                                                                | *45:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 45:14   |       |       | 100.0 |
-| Active                                                                      |         | 45:14 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   4.5 |
+| Stories                                                                     | 45:20   |       |       | 100.0 |
+| Active                                                                      |         | 45:20 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   4.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.1 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.1 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.0 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   1.9 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.3 |
 | COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   4.9 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   0.8 |
 | COMPLETED Fix codacy warning on exceptions                                  |         |       |  0:08 |   0.3 |
-| COMPLETED Create a language independent ORM layer                           |         |       | 12:51 |  28.4 |
+| COMPLETED Create a language independent ORM layer                           |         |       | 12:51 |  28.3 |
 | COMPLETED Make log directory configurable                                   |         |       |  1:26 |   3.2 |
-| STARTED Tidy-up test models                                                 |         |       |  2:31 |   5.6 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  45.9 |
+| COMPLETED Tidy-up test models                                               |         |       |  2:37 |   5.8 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  45.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -334,7 +334,9 @@ related to ORM (object-relational mapping).
 It would be nice to supply a directory for the log files and get dogen
 to output the logs there.
 
-*** STARTED Tidy-up test models                                       :story:
+*** COMPLETED Tidy-up test models                                     :story:
+    CLOSED: [2017-03-04 Sat 23:44]
+    CLOCK: [2017-03-04 Sat 23:38]--[2017-03-04 Sat 23:44] =>  0:06
     CLOCK: [2017-03-04 Sat 23:07]--[2017-03-04 Sat 23:37] =>  0:30
     CLOCK: [2017-03-04 Sat 22:25]--[2017-03-04 Sat 23:06] =>  0:41
     CLOCK: [2017-03-04 Sat 21:04]--[2017-03-04 Sat 22:24] =>  1:20
@@ -432,7 +434,6 @@ At present we are only testing packages in comments.
 
 This name is a bit misleading, this is not a generic database model
 but its designed to specifically test odb.
-
 
 *** Add a "flat directory" mode                                       :story:
 
